# peripersonal-space-toolkit

./: .gitignore  AGENTS.md  CITATION.cff  README.md  THIRD_PARTY_LICENSES.md  index.html  methods.tex  methods_references.bib  pyproject.toml
For-AI/: README.md  agent_update_protocol.md  evolving_goals.md  project_context.md
assets/: REDISTRIBUTABLE_HRTF_ASSETS.md
assets/0. Head-Related Impulse Response (HRIR) model/: FABIAN_HRIR_measured_HATO_0.manifest.json
assets/breathing/: spoken_asset_variants.json  spoken_assets_manifest.json
assets/master_blocks/: Master_Block_1.csv  Master_Block_2.csv
assets/preloads/: preload_inventory.json
configs/: experiment.example.toml  pfeiffer_style_left_approach.design.json  pfeiffer_style_right_approach.design.json  stimulus_design.example.json
data/sample/: audio_tactile_with_facilitation_preregistered_2p5sd.csv  clean_trials_preregistered_2p5sd.csv  master_successful_participants.csv
docs/: AUDIO_ROUTING_STRESS_TEST.md  EXPERIMENT_LATENCY_VALIDATION.md  GITHUB_PAGES_DASHBOARD.md  HARDWARE_VENDOR_DOCS.md  PARADIGM_LIBRARY.md  PPS_METADATA_REPRODUCIBILITY_AUDIT.md  PRIVACY_RELEASE.md  PUBLISHED_PARADIGM_STRESS_TEST.md  REPLICATION.md  STIMULUS_DESIGNER.md  STUDY5_PROTOCOL.md  WINDOWS_APP.md  hardware_setup.md  privacy_boundary.md  replication_workflow.md
study_templates/: barumerli_2026_arm_movement_exp1.json  barumerli_2026_arm_movement_exp2.json  canzoneri_2012_dynamic_sounds.json  canzoneri_2013_amputation_prosthesis.json  canzoneri_2013_tool_use_reshaping.json  ferri_2015_artificial_looming_valence.json  ferri_2015_ecological_looming_valence.json  galli_2015_wheelchair_full_body.json  lerner_2021_3d_audio_tactile_boundary.json  matsuda_2021_four_directions.json  noel_2015_bodily_self.json  noel_2015_walking_full_body_action.json  pfeiffer_2018_lateral_perihead_left_to_right.json  serino_2015_front_back_trunk_exp2.json  serino_2015_peri_hand_exp3.json  serino_2015_peri_trunk_exp1.json  serino_2015_toolless_sync_training.json  study5_box_breathing_pps.json  taffou_2014_cynophobic_rear_looming.json  teneggi_2013_social_face_pps.json  tonelli_2019_echolocation.json
tests/: test_audio_assets.py  test_audio_routing.py  test_cli.py  test_dashboard_app.py  test_dashboard_baseline_segment.py  test_design.py  test_latency_validation.py  test_release_audit.py  test_seed_data.py  test_session_runner.py  test_study5_preload.py  test_timing_events.py  test_trial_filmstrip.py
tools/: __init__.py  build_preload_catalog.py  compare_pfeiffer_original.py  generate_spoken_assets.py  make_release_bundle.py  release_audit.py  ui_screenshot_check.py  verify_pfeiffer_profile.py
windows/: Build_3DTI_Renderer.ps1  Create_Desktop_Shortcut.ps1  Fetch_3DTI_Backend.ps1  Fetch_FABIAN_HRTF.ps1  Launch_HTML_Dashboard.bat  Launch_PPS_App.bat  Launch_Stimulus_Designer.bat  List_Audio_Devices.bat  Regenerate_Spoken_Assets.bat  Setup_Windows_App.ps1  Start_Website_Companion.bat  Stress_Audio_Device.bat
(+246 files in other folders)
